--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
+    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.0.6",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
-    "next": "13.4.10",
+    "axios": "^1.4.0",
+    "debug": "^4.3.4",
+    "next": "^13.4.10",
     "next-auth": "^4.22.1",
     "postcss": "8.4.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "3.3.3",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.2",
+    "supports-color": "^8.1.1",
+    "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "20.4.2",
+    "@types/react": "18.2.15",
+    "daisyui": "^3.3.1",
     "typescript": "5.1.6"
   }
 }
