--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/category/page.jsx", "components/Sidebar.tsx", "app/page.jsx", "app/_app.tsx", "app/cart/layout.jsx", "app/CustomLayout.jsx", "app/layout.tsx"],
   "exclude": ["node_modules"]
 }
