--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.0.6",
+    "@nextui-org/react": "^2.0.0",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "debug": "^4.3.4",
+    "headlessui": "^0.0.0",
     "next": "^13.4.10",
     "next-auth": "^4.22.1",
     "postcss": "8.4.26",
@@ -22,13 +24,14 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
-    "supports-color": "^8.1.1",
+    "react-scroll": "^1.8.9",
+    "react-slick": "^0.29.0",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
-    "daisyui": "^3.3.1",
+    "daisyui": "^3.5.0",
     "typescript": "5.1.6"
   }
 }
